5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1709_3068.log
== TEST (2019-05-02 10:24:04) 
-- CODE:
x=input("nome da arma: ").upper()
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 or d1>10):
	print("Entrada invalida")
elif(d2<1 or d1>10):
	print("Entrada invalida")
elif(x!="CIMITARRA" and X!="KATANA" and X!="SABRE"):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*(d1+d2)+2*y)
elif(x=="KATANA"):
	print(2*(d1+d2)+y)
elif(x=="SABRE"):
	print((d1+d2)+2*y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    elif(x!="CIMITARRA" and X!="KATANA" and X!="SABRE"):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:25:03) 
-- CODE:
x=input(("nome da arma: ").upper())
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 or d1>10):
	print("Entrada invalida")
elif(d2<1 or d1>10):
	print("Entrada invalida")
elif(x!="CIMITARRA" and X!="KATANA" and X!="SABRE"):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*(d1+d2)+2*y)
elif(x=="KATANA"):
	print(2*(d1+d2)+y)
elif(x=="SABRE"):
	print((d1+d2)+2*y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    elif(x!="CIMITARRA" and X!="KATANA" and X!="SABRE"):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:26:02) 
-- CODE:
x=input(.upper()("nome da arma: "))
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 or d1>10):
	print("Entrada invalida")
elif(d2<1 or d1>10):
	print("Entrada invalida")
elif(x!="CIMITARRA" and X!="KATANA" and X!="SABRE"):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*(d1+d2)+2*y)
elif(x=="KATANA"):
	print(2*(d1+d2)+y)
elif(x=="SABRE"):
	print((d1+d2)+2*y)
-- ERROR:
File "XXXX", line 1
    x=input(.upper()("nome da arma: "))
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:26:09) 
-- CODE:
x=input.upper()("nome da arma: ")
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 or d1>10):
	print("Entrada invalida")
elif(d2<1 or d1>10):
	print("Entrada invalida")
elif(x!="CIMITARRA" and X!="KATANA" and X!="SABRE"):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*(d1+d2)+2*y)
elif(x=="KATANA"):
	print(2*(d1+d2)+y)
elif(x=="SABRE"):
	print((d1+d2)+2*y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=input.upper()("nome da arma: ")
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:26:30) 
-- CODE:
x=input("nome da arma: ".upper())
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 or d1>10):
	print("Entrada invalida")
elif(d2<1 or d1>10):
	print("Entrada invalida")
elif(x!="CIMITARRA" and X!="KATANA" and X!="SABRE"):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*(d1+d2)+2*y)
elif(x=="KATANA"):
	print(2*(d1+d2)+y)
elif(x=="SABRE"):
	print((d1+d2)+2*y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    elif(x!="CIMITARRA" and X!="KATANA" and X!="SABRE"):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:27:29) 
-- CODE:
x=input("nome da arma: ")
x=.upper()
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 or d1>10):
	print("Entrada invalida")
elif(d2<1 or d1>10):
	print("Entrada invalida")
elif(x!="CIMITARRA" and X!="KATANA" and X!="SABRE"):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*(d1+d2)+2*y)
elif(x=="KATANA"):
	print(2*(d1+d2)+y)
elif(x=="SABRE"):
	print((d1+d2)+2*y)
-- ERROR:
File "XXXX", line 2
    x=.upper()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:30:49) 
-- CODE:
x=input.upper()("nome da arma: ")
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 or d1>10):
	print("Entrada invalida")
elif(d2<1 or d1>10):
	print("Entrada invalida")
elif(x!="CIMITARRA" and X!="KATANA" and X!="SABRE"):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*(d1+d2)+2*y)
elif(x=="KATANA"):
	print(2*(d1+d2)+y)
elif(x=="SABRE"):
	print((d1+d2)+2*y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=input.upper()("nome da arma: ")
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:31:18) 
-- CODE:
x=input("nome da arma: ".upper())
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 or d1>10):
	print("Entrada invalida")
elif(d2<1 or d1>10):
	print("Entrada invalida")
elif(x!="CIMITARRA" and X!="KATANA" and X!="SABRE"):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*(d1+d2)+2*y)
elif(x=="KATANA"):
	print(2*(d1+d2)+y)
elif(x=="SABRE"):
	print((d1+d2)+2*y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    elif(x!="CIMITARRA" and X!="KATANA" and X!="SABRE"):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:33:07) 
-- CODE:
x=input("nome da arma: ")upper(x)
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 or d1>10):
	print("Entrada invalida")
elif(d2<1 or d1>10):
	print("Entrada invalida")
elif(x!="CIMITARRA" and X!="KATANA" and X!="SABRE"):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*(d1+d2)+2*y)
elif(x=="KATANA"):
	print(2*(d1+d2)+y)
elif(x=="SABRE"):
	print((d1+d2)+2*y)
-- ERROR:
File "XXXX", line 1
    x=input()upper(x)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:33:15) 
-- CODE:
x=input("nome da arma: ").upper(x)
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 or d1>10):
	print("Entrada invalida")
elif(d2<1 or d1>10):
	print("Entrada invalida")
elif(x!="CIMITARRA" and X!="KATANA" and X!="SABRE"):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*(d1+d2)+2*y)
elif(x=="KATANA"):
	print(2*(d1+d2)+y)
elif(x=="SABRE"):
	print((d1+d2)+2*y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=input().upper(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:34:04) 
-- CODE:
x=input("nome da arma: ").upper()
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 or d1>10):
	print("Entrada invalida")
elif(d2<1 or d1>10):
	print("Entrada invalida")
elif(x!="CIMITARRA" and X!="KATANA" and X!="SABRE"):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*(d1+d2)+2*y)
elif(x=="KATANA"):
	print(2*(d1+d2)+y)
elif(x=="SABRE"):
	print((d1+d2)+2*y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    elif(x!="CIMITARRA" and X!="KATANA" and X!="SABRE"):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:34:40) 
-- CODE:
x=input("nome da arma: ").upper()
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 or d1>10):
	print("Entrada invalida")
elif(d2<1 or d1>10):
	print("Entrada invalida")
elif(x!="CIMITARRA" and X!="KATANA" and X!="SABRE"):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*(d1+d2)+2*y)
elif(x=="KATANA"):
	print(2*(d1+d2)+y)
elif(x=="SABRE"):
	print((d1+d2)+2*y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    elif(x!="CIMITARRA" and X!="KATANA" and X!="SABRE"):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:35:44) 
-- CODE:
x=input("nome da arma: ").upper()
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 or d1>10):
	print("Entrada invalida")
elif(d2<1 or d1>10):
	print("Entrada invalida")
elif(x!=CIMITARRA and X!=KATANA and X!=SABRE):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*(d1+d2)+2*y)
elif(x=="KATANA"):
	print(2*(d1+d2)+y)
elif(x=="SABRE"):
	print((d1+d2)+2*y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    elif(x!=CIMITARRA and X!=KATANA and X!=SABRE):
NameError: name 'CIMITARRA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:36:26) 
-- CODE:
x=input("nome da arma: ").upper()
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 or d1>10):
	print("Entrada invalida")
elif(d2<1 or d1>10):
	print("Entrada invalida")
elif(x!=CIMITARRA or X!=KATANA or X!=SABRE):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*(d1+d2)+2*y)
elif(x=="KATANA"):
	print(2*(d1+d2)+y)
elif(x=="SABRE"):
	print((d1+d2)+2*y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    elif(x!=CIMITARRA or X!=KATANA or X!=SABRE):
NameError: name 'CIMITARRA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:37:40) 
-- CODE:
x=input("nome da arma: ").upper()
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 or d1>10):
	print("Entrada invalida")
elif(d2<1 or d1>10):
	print("Entrada invalida")
elif(x!=cimitarra or X!=katana or X!=sabre):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*(d1+d2)+2*y)
elif(x=="KATANA"):
	print(2*(d1+d2)+y)
elif(x=="SABRE"):
	print((d1+d2)+2*y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    elif(x!=cimitarra or X!=katana or X!=sabre):
NameError: name 'cimitarra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:38:31) 
-- CODE:
x=input("nome da arma: ").upper()
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 or d1>10):
	print("Entrada invalida")
elif(d2<1 or d1>10):
	print("Entrada invalida")
elif(x!="cimitarra" or X!="katana" or X!="sabre"):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*(d1+d2)+2*y)
elif(x=="KATANA"):
	print(2*(d1+d2)+y)
elif(x=="SABRE"):
	print((d1+d2)+2*y)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:39:34) 
-- CODE:
x=input("nome da arma: ").upper()
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 or d1>10):
	print("Entrada invalida")
elif(d2<1 or d1>10):
	print("Entrada invalida")
elif(x!="cimitarra" and X!="katana" and X!="sabre"):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*(d1+d2)+2*y)
elif(x=="KATANA"):
	print(2*(d1+d2)+y)
elif(x=="SABRE"):
	print((d1+d2)+2*y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    elif(x!="cimitarra" and X!="katana" and X!="sabre"):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:41:14) 
-- CODE:
x=input("nome da arma: ").upper()
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 and d1>10):
	print("Entrada invalida")
elif(d2<1 and d1>10):
	print("Entrada invalida")
elif(x!="cimitarra" or X!="katana" or X!="sabre"):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*(d1+d2)+2*y)
elif(x=="KATANA"):
	print(2*(d1+d2)+y)
elif(x=="SABRE"):
	print((d1+d2)+2*y)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:08) 
-- CODE:
x=input("nome da arma: ").upper()
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 and d1>10):
	print("Entrada invalida")
elif(d2<1 and d1>10):
	print("Entrada invalida")
elif(x!="cimitarra" or X!="katana" or X!="sabre"):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x==CIMITARRA):
	print(2*(d1+d2)+2*y)
elif(x==KATANA):
	print(2*(d1+d2)+y)
elif(x==SABRE):
	print((d1+d2)+2*y)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:42) 
-- CODE:
x=input("nome da arma: ").upper()
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 and d1>10):
	print("Entrada invalida")
elif(d2<1 and d1>10):
	print("Entrada invalida")
elif(x!="cimitarra" or X!="katana" or X!="sabre"):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x==cimitarra):
	print(2*(d1+d2)+2*y)
elif(x==katana):
	print(2*(d1+d2)+y)
elif(x==sabre):
	print((d1+d2)+2*y)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:44:19) 
-- CODE:
x=input("nome da arma: ").upper()
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 and d1>10):
	print("Entrada invalida")
elif(d2<1 and d1>10):
	print("Entrada invalida")
elif(x!="cimitarra" or X!="katana" or X!="sabre"):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x==cimitarra):
	print(2*(d1+d2)+2*y)
elif(x==katana):
	print(2*(d1+d2)+y)
elif(x==sabre):
	print((d1+d2)+2*y)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:45:32) 
-- CODE:
x=input("nome da arma: ").upper()
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 and d1>10):
	print("Entrada invalida")
elif(d2<1 and d1>10):
	print("Entrada invalida")
elif(x!="cimitarra" or X!="katana" or X!="sabre"):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x=="cimitarra"):
	print(2*(d1+d2)+2*y)
elif(x=="katana"):
	print(2*(d1+d2)+y)
elif(x=="sabre"):
	print((d1+d2)+2*y)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:46:01) 
-- CODE:
x=input("nome da arma: ").upper()
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 and d1>10):
	print("Entrada invalida")
elif(d2<1 and d1>10):
	print("Entrada invalida")
elif(x!="cimitarra" or X!="katana" or X!="sabre"):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x=="cimitarra"):
	print(2*(d1+d2)+2*y)
elif(x=="katana"):
	print(2*(d1+d2)+y)
elif(x=="sabre"):
	print((d1+d2)+2*y)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:47:16) 
-- CODE:
x=input("nome da arma: ").upper()
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 and d1>10):
	print("Entrada invalida")
elif(d2<1 and d1>10):
	print("Entrada invalida")
elif(x!="cimitarra" or X!="katana" or X!="sabre"):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
else(x=="cimitarra"):
	print(2*(d1+d2)+2*y)
	elif(x=="katana"):
		print(2*(d1+d2)+y)
	elif(x=="sabre"):
		print((d1+d2)+2*y)
-- ERROR:
File "XXXX", line 13
    else(x=="cimitarra"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:48:03) 
-- CODE:
x=input("nome da arma: ").upper()
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(d1<1 and d1>10):
	print("Entrada invalida")
elif(d2<1 and d1>10):
	print("Entrada invalida")
elif(x!="cimitarra" or X!="katana" or X!="sabre"):
	print("Entrada invalida")
elif(y<0):
	print("Entrada invalida")
elif(x=="cimitarra"):
	print(2*(d1+d2)+2*y)
elif(x=="katana"):
	print(2*(d1+d2)+y)
elif(x=="sabre"):
	print((d1+d2)+2*y)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:51:09) 
-- CODE:
x=input("nome da arma: ").upper()
y=int(input("destreza do personagem: "))
d1=int(input("sorteio1: "))
d2=int(input("sorteio2: "))
if(x=="cimitarra"):
	print(2*(d1+d2)+2*y)
elif(x=="katana"):
	print(2*(d1+d2)+y)
elif(x=="sabre"):
	print((d1+d2)+2*y)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
